add firstnames string converter
